--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,14 @@
     "babel-core": "^6.26.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "cross-env": "^5.0.5",
     "deasync": "^0.1.10",
     "express": "^4.15.5",
     "express-validator": "^4.2.1",
     "express-winston": "^2.4.0",
     "fibers": "^2.0.0",
+    "helmet": "^3.8.2",
     "ioredis": "^3.1.4",
     "jsonwebtoken": "^8.0.1",
     "jwt-redis": "^1.2.1",
@@ -30,6 +32,7 @@
     "node-config-env-value": "^1.0.0",
     "passport": "^0.4.0",
     "passport-jwtr": "^1.2.1",
+    "response-time": "^2.3.2",
     "shortid": "^2.2.8",
     "validator": "^9.0.0",
     "winston": "^2.3.1"
