--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,8 @@
     "node-config-env-value": "^1.0.0",
     "passport": "^0.4.0",
     "passport-jwtr": "^1.2.1",
+    "query-parser-express": "^1.0.3",
+    "ramda": "^0.24.1",
     "response-time": "^2.3.2",
     "shortid": "^2.2.8",
     "validator": "^9.0.0",
