--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "backblaze-b2": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^8.0.1",
     "jwt-redis": "^1.2.1",
     "mongodb": "^2.2.31",
+    "multiparty": "^4.1.3",
     "node-config-env-value": "^1.0.0",
     "passport": "^0.4.0",
     "passport-jwtr": "^1.2.1",
@@ -54,6 +56,7 @@
     "eslint-watch": "^3.1.2",
     "flow-bin": "^0.55.0",
     "mocha": "^3.5.3",
+    "nodemon": "^1.12.1",
     "rimraf": "^2.6.2"
   }
 }
