--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,44 +1,58 @@
 {
-  "name": "application",
+  "name": "tanks-admin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=localhost webpack-dev-server  --hot --inline"
+    "start": "cross-env NODE_ENV=localhost webpack-dev-server --hot --inline"
   },
-  "author": "",
+  "author": "Alex Natashkin",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
+    "aphrodite": "^1.1.0",
+    "axios": "^0.16.1",
+    "bluebird": "^3.5.0",
     "cross-env": "^5.0.5",
-    "node-config-env-value": "^1.0.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "immutable": "^3.8.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "node-config-env-value": "^1.1.1",
+    "query-string": "^4.3.4",
+    "radium": "^0.18.2",
+    "ramda": "^0.23.0",
+    "ramda-fantasy": "^0.8.0",
+    "react": "^15.4.2",
+    "react-datepicker": "^0.44.0",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
-    "redux-localstorage-simple": "^1.3.1",
-    "redux-logger": "^3.0.6",
+    "react-text-mask": "^4.1.0",
+    "redux": "^3.6.0",
+    "redux-auth-wrapper": "^1.0.0",
+    "redux-localstorage-simple": "^1.2.0",
+    "redux-logger": "^2.8.1",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.74.2"
+    "router": "^1.2.0",
+    "semantic-ui-css": "^2.2.4",
+    "semantic-ui-react": "^0.64.8",
+    "semantic-ui-react-numberpicker": "0.0.1-b",
+    "text-mask-addons": "^3.5.0"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
+    "autoprefixer-loader": "*",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
     "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
