--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,6 +33,7 @@
     "multiparty": "^4.1.3",
     "node-config-env-value": "^1.0.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-jwtr": "^1.2.1",
     "query-parser-express": "^1.0.3",
     "ramda": "^0.24.1",
