--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -14,9 +14,11 @@
     "bluebird": "^3.5.0",
     "cross-env": "^5.0.5",
     "immutable": "^3.8.1",
+    "install": "^0.10.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "node-config-env-value": "^1.1.1",
+    "npm": "^5.4.2",
     "query-string": "^4.3.4",
     "radium": "^0.18.2",
     "ramda": "^0.23.0",
@@ -35,8 +37,8 @@
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
     "router": "^1.2.0",
-    "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "^0.64.8",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.74.2",
     "semantic-ui-react-numberpicker": "0.0.1-b",
     "text-mask-addons": "^3.5.0"
   },
