change dependace version

--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -9,14 +9,13 @@
   "author": "Alex Natashkin",
   "license": "ISC",
   "dependencies": {
-    "aphrodite": "^1.1.0",
-    "axios": "^0.16.1",
-    "bluebird": "^3.5.0",
+    "aphrodite": "^1.2.4",
+    "axios": "^0.16.2",
+    "bluebird": "^3.5.1",
     "cross-env": "^5.0.5",
-    "moment": "^2.18.1",
     "node-config-env-value": "^1.1.1",
-    "radium": "^0.18.2",
-    "ramda": "^0.23.0",
+    "radium": "^0.19.5",
+    "ramda": "^0.25.0",
     "ramda-fantasy": "^0.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -31,21 +30,23 @@
     "redux-thunk": "^2.2.0",
     "router": "^1.2.0",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.74.2",
+    "semantic-ui-react": "^0.74.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "*",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack": "^3.7.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
