--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -11,41 +11,40 @@
   "dependencies": {
     "aphrodite": "^1.2.4",
     "axios": "^0.16.2",
+    "babel-core": "^6.26.0",
     "bluebird": "^3.5.1",
     "cross-env": "^5.0.5",
     "node-config-env-value": "^1.1.1",
     "radium": "^0.19.5",
     "ramda": "^0.25.0",
     "ramda-fantasy": "^0.8.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^3.2.0",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0",
-    "redux-auth-wrapper": "^1.0.0",
-    "redux-localstorage-simple": "^1.2.0",
-    "redux-logger": "^2.8.1",
+    "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.2",
+    "redux-localstorage-simple": "^1.3.1",
+    "redux-logger": "^3.0.6",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
-    "router": "^1.2.0",
+    "router": "^1.3.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.74.2"
   },
   "devDependencies": {
-    "autoprefixer-loader": "*",
-    "babel-core": "^6.26.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.10.0",
-    "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.7.0",
     "webpack-dev-server": "^2.9.1"
   }
