--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -23,12 +23,14 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
     "react-router-redux": "^4.0.8",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
     "redux-localstorage-simple": "^1.3.1",
     "redux-logger": "^3.0.6",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "router": "^1.3.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.74.2"
